cmake_minimum_required(VERSION 2.8)

ADD_DEFINITIONS(-Wall)

set(CMAKE_VERBOSE_MAKEFILE off)
PROJECT(libtest)

ADD_DEFINITIONS(-fPIC -Wl,--export-dynamic)

add_library(test SHARED test.c)
SET_TARGET_PROPERTIES(test PROPERTIES VERSION 2.0.1 SOVERSION 2)

FILE(GLOB headers *.h *.hpp)
INSTALL(FILES ${headers}
	DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/test
)

install(TARGETS test
		ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
		RUNTIME DESTINATION bin
)
